# indoor-cycling-training-generator

./: .gitignore  README.md  click_example.py  click_skeleton.py  fit_encoder.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  training_data.yaml  visualizer.py
.github/: ISSUE_TEMPLATE.md
src/indoor_cycling_training_generator/: fit_encoder.py  main.py  visualizer.py
src/indoor_cycling_training_generator/templates/: index.html
src/indoor_cycling_training_generator/training_plans/ftp_increase_1month/: week2.yaml  week4.yaml
tests/: test_main.py
training_plans/ftp_increase_1month/: TODO.md  week1.yaml  week2.yaml  week3.yaml  week4.yaml
workouts/: new_collection.yaml  workouts.yaml
